--- a/frontend/react-hooks-frontend/package.json
+++ b/frontend/react-hooks-frontend/package.json
@@ -42,6 +42,7 @@
     "@babel/core": "^7.21.4",
     "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
-    "@babel/preset-react": "^7.18.6"
+    "@babel/preset-react": "^7.18.6",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
